# asu-mcs

./: .csharpierrc  .gitignore  README.md  asu-mcs.sln
CSE340/Module12/: HW1.docx  HW2.docx
CSE511/: .gitignore  README.md
CSE511/Assigment1/: getData.ts  solution.sql  testcases.sql
CSE511/Assignment1/: droptables.sql  import.sql
CSE511/Assignment2/: README.md  droptables.sql  solution.sql
CSE511/Assignment3/: Interface.py  getData.ts  tester.py
CSE511/Assignment4/: Interface.py  tester.py
CSE511/Assignment5/: Interface.py  interface.py  tester.py
CSE511/Assignment6/: Assignment+6+NoSQL.ipynb
CSE543InfoAssurance/: cse543.code-workspace
CSE551/notes/: notes.ipynb
CSE551/week1/: StableMatching.ipynb
CSE551/week2/: GreedyAlgorithms.ipynb
CSE551/week3/: AmortizedAnalysis.ipynb
CSE565/P1/: .bazelrc  .gitignore  BUILD  coverage.sh
CSE565/P2/: CSE 565_Specification-Based Testing Project_Test Case and Defect Spreatsheet.xlsx  Claudio_RodriguezRodriguez_CSE 565_Specification-Based Testing Project.xlsx  Project1Script
CSE565/P3/: ClaudioRodriguezRodriguez_CSE 565_Design of Experiments Project.docx  model.txt  test.csv
CSE566/Projects/: ClaudioRodriguezRodriguez_CSE 566_Code Refactoring Project.docx  (+4 more)
CSE571/: .gitignore
CSE572/P1/: Result.csv  main.ipynb  quiz2.ipynb
CSE579/: .gitignore  Invoke-Clingo.psm1
PortfolioInclusionReports/: LatexTools.psm1
SER334/: .gitignore  .gitignore copy  LatexTools.psm1
SER334/ADJPart3/AlgorithmSimulator/: CMakeLists.txt  PageTable.c  PageTable.h  Simulator.c  test2-3frames.txt  test2-4frames.txt  test2-5frames.txt  test3-1frames.txt
SER334/Module6/HW6/: CMakeLists.txt  FilterProcessor.c  FilterProcessor.h  PixelProcessor.c  PixelProcessor.h  RodriguezRodriguezFilters.c
SER334/Module7/HW7/: CMakeLists.txt  RodriguezRodriguezInstanceHost.c  RodriguezRodriguezLoadBalancer.c
SER334/Notes/: CMakeLists.txt  Notes.cbp
SER334/Notes/.cmake/api/v1/reply/: cache-v2-f1cc71a6d61d48050e15.json  cmakeFiles-v1-f3d9b00675e3c28c5bc5.json  codemodel-v2-174767fe3a2831f06228.json  index-2022-02-07T05-15-08-0193.json  target-Module7Q7Q7-Debug-b545b994ae0ae55202b0.json
SER334/Notes/Module2/: 1MemoryAllocation.c  98Quiz2.c  98Quiz6.c  99NoteStruct1.c
SER334/Notes/Module3/: 98Quiz1.c  98Quiz3.c  98Quiz4.c  98Quiz5.c  LinkedList.c  LinkedList.h
SER334/Notes/Module6/: NoteForks.c  Q6Q6.c
SER334/Notes/Module7/: Q7Q7.c
(+460 files in other folders)
